fix sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=stuartvandenbrink_tic-tac-toe
+sonar.projectKey=stuartvandenbrink_helloworld
 sonar.organization=stuartvandenbrink
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=tic-tac-toe
+#sonar.projectName=helloworld
 #sonar.projectVersion=1.0
 
 
